# Atelier_CMAKE

./: CMakeLists.txt
include/: calculator.h
src/: main.c
src/lib/: calculator.c
